--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 
     <div class="container">
         <header>
-            <h1><b>Marshial Arts</b><br>Visual Artist</h1>
+            <h1><b>Hüü</b><br>Visual Artist</h1>
             <p class="subtitle">Video & Photography Catalogue</p>
         </header>
 
@@ -257,7 +257,7 @@
                         <svg viewBox="0 0 24 24"><path d="M16.5 12c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM14 3.23v2.06c2.89.86 5 3.54 5 6.71s-2.11 5.85-5 6.71v2.06c4.01-.91 7-4.49 7-8.77s-2.99-7.86-7-8.77zM3 9v6h4l5 5V4L7 9H3z"/></svg>
                     </button>
                     <div class="media-container">
-                        <video src="https://res.cloudinary.com/dctafjvwt/video/upload/v1771012267/product_sound_hdcqkg.mp4" muted loop playsinline></video>
+                        <video src="https://res.cloudinary.com/dctafjvwt/video/upload/v1771020611/product_withsound_avn43k.mp4" muted loop playsinline></video>
                     </div>
                     <div class="info">
                         <h3>Sound Loop</h3>
