--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                     <div class="info">
                         <h3>Basic Loop</h3>
                        <p class="category-desc"><br>2+ Scenes or Products (8-10 seconds)<br>High-quality motion loop and visual teaser. No sound, simply add your own choice for social media uploads.</p>
-                        <span class="price">ab 149€</span>
+                        <span class="price">from 149€</span>
                         <button class="request-btn" data-product="Basic Loop (ab 149€)">Request Now</button>
                     </div>
                 </div>
@@ -262,7 +262,7 @@
                     <div class="info">
                         <h3>Sound Loop</h3>
                          <p class="category-desc"><br>2+ Scenes or Products (8-10 seconds) <br>High-quality motion loop with sound effects. You choose the vibe.<br><br></b></b></p>
-                        <span class="price">ab 199€</span>
+                        <span class="price">from 199€</span>
                         <button class="request-btn" data-product="Sound Loop (ab 199€)">Request Now</button>
                     </div>
                 </div>
@@ -273,7 +273,7 @@
                         <li>Add length <span>+39€</span></li>
                         <li>Add product <span>+49€</span></li>
                         <li>Express 72h <span>+99€</span></li>
-                        <li>10% Discount <span>-10%</span></li>
+                        <li>10% Discount<br>All you have to do is to add this website as reference on your post <span>-10%</span></li>
                     </ul>
                 </div>
             </div>
@@ -295,8 +295,8 @@
                     </div>
                     <div class="info">
                         <h3>Model Basic Loop</h3>
-                        <p class="category-desc"><br>2+ Scenes or Products (8-10 seconds)<br>Motion loop and visual teaser.</p>
-                        <span class="price">ab 199€</span>
+                        <p class="category-desc"><br>2+ Scenes or Products (8-10 seconds)<br>Motion loop and visual teaser. No sound, simply add your own choice for social media uploads.</p>
+                        <span class="price">from 199€</span>
                         <button class="request-btn" data-product="Basic Loop (ab 149€)">Request Now</button>
                     </div>
                 </div>
@@ -310,8 +310,8 @@
                     </div>
                     <div class="info">
                         <h3>Model Sound Loop</h3>
-                        <p class="category-desc"><br>2+ Scenes or Products (8-10 seconds)<br>Motion loop with sound effects.</p>
-                        <span class="price">ab 249€</span>
+                        <p class="category-desc"><br>2+ Scenes or Products (8-10 seconds)<br>Motion loop with sound effects.<br><br></p>
+                        <span class="price">from 249€</span>
                         <button class="request-btn" data-product="Sound Loop (ab 199€)">Request Now</button>
                     </div>
                 </div>
@@ -346,7 +346,7 @@
                     <div class="info">
                         <h3>Environment Pack</h3>
                         <p class="category-desc">4 Images of your product. Custom lighting and mood environments.</p>
-                        <span class="price">ab 49€</span>
+                        <span class="price">from 49€</span>
                         <button class="request-btn" data-product="Environment Pack (ab 49€)">Request Now</button>
                     </div>
                 </div>
@@ -362,7 +362,7 @@
                     <div class="info">
                         <h3>Model Pack</h3>
                         <p class="category-desc">4 Images of your product on a model. Includes clothing styling.</p>
-                        <span class="price">ab 69€</span>
+                        <span class="price">from 69€</span>
                         <button class="request-btn" data-product="Model Pack (ab 69€)">Request Now</button>
                     </div>
                 </div>
@@ -372,8 +372,6 @@
                     <ul class="extras-list">
                         <li>Add 2 Images <span>+19€</span></li>
                         <li>Express 72h <span>+59€</span></li>
-                        <li>Model Surcharge <span>+$90</span></li>
-                        <li>Full Rights <span>+$300</span></li>
                     </ul>
                 </div>
             </div>
