--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
                     </div>
                     <div class="info">
                         <h3>Model Pack</h3>
-                        <p class="category-desc">4 Images of your product on a model. Includes clothing styling.</p>
+                        <p class="category-desc">4 Images of your product on a model. Includes variable clothing and backgrounds</p>
                         <span class="price">from 69€</span>
                         <button class="request-btn" data-product="Model Pack (ab 69€)">Request Now</button>
                     </div>
