--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
                     </div>
                     <div class="info">
                         <h3>Environment Pack</h3>
-                        <p class="category-desc">4 Images of your product. Custom lighting and mood environments.</p>
+                        <p class="category-desc">4 Images of your product. Custom moods with lighting and environments.</p>
                         <span class="price">from 49€</span>
                         <button class="request-btn" data-product="Environment Pack (ab 49€)">Request Now</button>
                     </div>
@@ -355,7 +355,7 @@
                     </div>
                     <div class="info">
                         <h3>Model Pack</h3>
-                        <p class="category-desc">4 Images of your product on a model. Includes variable clothing and backgrounds</p>
+                        <p class="category-desc">4 Images of your product on a model. Includes variable clothing and backgrounds.</p>
                         <span class="price">from 69€</span>
                         <button class="request-btn" data-product="Model Pack (ab 69€)">Request Now</button>
                     </div>
