--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Marshial Arts | Visual Artist</title>
+    <title>Visual Loop Studio</title>
     <style>
         /* --- DESIGN SYSTEM --- */
         :root {
@@ -228,8 +228,8 @@
 
     <div class="container">
         <header>
-            <h1><b>Hüü</b><br>Visual Artist</h1>
-            <p class="subtitle">Video & Photography Catalogue</p>
+            <h1>Visual Loops</h1>
+            <p class="subtitle">stand out. be special.</p>
         </header>
 
         <section class="category-section">
@@ -382,6 +382,7 @@
                     <input type="text" id="product-input" name="product" placeholder="Product Interest" class="full-width">
                     <textarea id="vision-input" name="message" rows="5" placeholder="Project details..." class="full-width"></textarea>
                 </div>
+                <br>
                 <button type="submit" class="submit-btn" id="submit-btn">Send Inquiry</button>
             </form>
         </section>
