--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Visual Loop Studio</title>
+    <title>Magic Loops</title>
     <style>
         /* --- DESIGN SYSTEM --- */
         :root {
@@ -228,7 +228,7 @@
 
     <div class="container">
         <header>
-            <h1>Visual Loops</h1>
+            <h1>Magic Loops</h1>
             <p class="subtitle">stand out. be special.</p>
         </header>
 
@@ -318,7 +318,7 @@
                         <li>Add length <span>+39€</span></li>
                         <li>Add product <span>+49€</span></li>
                         <li>Express 72h <span>+99€</span></li>
-                        <li>10% Discount <span>-10%</span></li>
+                        <li>10% Discount<br>All you have to do is to add this website as reference on your post <span>-10%</span></li>
                     </ul>
                 </div>
             </div>
@@ -373,6 +373,20 @@
             </div>
         </section>
 
+      <!-- HOW TO WORK -->  
+        <section class="category-section">
+            <div class="category-header">
+                <h2>How does it work?</h2>
+                <p class="category-desc">Send one of the following:
+                <br>1. Web page with product photos.
+                <br>2. Well lit photos of your product (phone camera works).
+                <br>3. Send the physical product.
+                <br>4. Write your vision (eg.: colors/background - optional)</p></p>
+            </div>
+
+        </section>
+
+         <!-- CONTACT -->  
         <section class="contact-section" id="contact">
             <h2 style="font-weight: 200; text-transform: uppercase; letter-spacing: 5px; margin-bottom: 2rem;">Work with me</h2>
             <form id="contact-form" action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
@@ -389,9 +403,9 @@
 
         <footer>
               <p>Impressum</p>
-            <p><strong>Marcel H</strong><br>
+            <p><strong>Marcel Hübner</strong><br>
             Creative Visual Artist<br>
-            Musterstraße 123, 10115 Berlin<br>
+            59590 Geseke<br>
             Germany</p>
         </footer>
     </div>
