--- a/index.html
+++ b/index.html
@@ -346,10 +346,10 @@
                 <div class="article photo-card">
                     <div class="image-counter">1 / 4</div>
                     <div class="media-container">
-                        <img src="https://res.cloudinary.com/dctafjvwt/image/upload/v1771012196/Basic_3_mhv1gz.jpg" class="active">
-                        <img src="https://res.cloudinary.com/dctafjvwt/image/upload/v1771012198/Basic_2_wsa3cq.jpg">
-                        <img src="https://res.cloudinary.com/dctafjvwt/image/upload/v1771012198/Basic_1_pmdxfn.jpg">
-                        <img src="https://res.cloudinary.com/dctafjvwt/image/upload/v1771012196/Basic_4_yoityq.jpg">
+                        <img src="https://res.cloudinary.com/dctafjvwt/image/upload/v1771597179/Basic_3_omo1p6.webp" class="active">
+                        <img src="https://res.cloudinary.com/dctafjvwt/image/upload/v1771597178/Basic_2_jdadsq.webp">
+                        <img src="https://res.cloudinary.com/dctafjvwt/image/upload/v1771597179/Basic_1_n1frl6.webp">
+                        <img src="https://res.cloudinary.com/dctafjvwt/image/upload/v1771597191/Basic_4_rtof2m.webp">
                     </div>
                     <div class="info">
                         <h3>Environment Pack</h3>
@@ -362,10 +362,10 @@
                 <div class="article photo-card">
                     <div class="image-counter">1 / 4</div>
                     <div class="media-container">
-                        <img src="https://res.cloudinary.com/dctafjvwt/image/upload/v1771012237/Model_1_fko824.jpg" class="active">
-                        <img src="https://res.cloudinary.com/dctafjvwt/image/upload/v1771012239/Model_2_gdedzk.jpg">
-                        <img src="https://res.cloudinary.com/dctafjvwt/image/upload/v1771012238/Model_3_udpjnm.jpg">
-                        <img src="https://res.cloudinary.com/dctafjvwt/image/upload/v1771012239/Model_4_dnjd3h.jpg">
+                        <img src="https://res.cloudinary.com/dctafjvwt/image/upload/v1771597189/Model_1_qn8avw.webp" class="active">
+                        <img src="https://res.cloudinary.com/dctafjvwt/image/upload/v1771597190/Model_2_v8rtf7.webp">
+                        <img src="https://res.cloudinary.com/dctafjvwt/image/upload/v1771597191/Model_3_e7ve8s.webp">
+                        <img src="https://res.cloudinary.com/dctafjvwt/image/upload/v1771597191/Model_4_fmszb8.webp">
                     </div>
                     <div class="info">
                         <h3>Model Pack</h3>
